implemented commentController, little fixes